--- a/index.html
+++ b/index.html
@@ -11,24 +11,23 @@
 <body>
     <div class="container">
         <main>
-            <img src="https://picsum.photos/id/401/1000/500" alt="" class="slide">
-            <img src="https://picsum.photos/id/402/1000/500" alt="" class="slide">
-            <img src="https://picsum.photos/id/403/1000/500" alt="" class="slide">
-            <img src="https://picsum.photos/id/404/1000/500" alt="" class="slide">
+            <img src="https://picsum.photos/id/401/1000/500" alt="img1" class="slide">
+            <img src="https://picsum.photos/id/402/1000/500" alt="img2" class="slide">
+            <img src="https://picsum.photos/id/403/1000/500" alt="img3" class="slide">
+            <img src="https://picsum.photos/id/404/1000/500" alt="img4" class="slide">
         </main>
         <div class="nav">
-            <button onclick="goprev()"><img src="./icons/left.svg" alt="" srcset=""
-                    class="navigationicons left"></button>
-            <button onclick="gonext()"><img src="./icons/right.svg" alt="" class="navigationicons right"></button>
+            <button onclick="goprev()"><img src="./icons/left.svg" alt="leftBtn" class="navigationicons left"></button>
+            <button onclick="gonext()"><img src="./icons/right.svg" alt="RightBtn"
+                    class="navigationicons right"></button>
         </div>
 
         <div class="dotscontainer">
-            <div class="dots active" atr="0"></div>
-            <div class="dots " atr="1"></div>
-            <div class="dots " atr="2"></div>
-            <div class="dots " atr="3"></div>
+            <div class="dots active"></div>
+            <div class="dots "></div>
+            <div class="dots "></div>
+            <div class="dots "></div>
         </div>
-
 
     </div>
 
